--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ oxyroot = "0.1.25"
 pyo3 = { version = "0.26.0", features = ["abi3-py38"] }
 parking_lot = "0.12.3"
 numpy = "0.26.0"
+parquet = { version = "53.0.0", features = ["arrow"] }
+arrow = "53.0.0"
