--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ crate-type = ["cdylib"]
 
 [dependencies]
 oxyroot = "0.1.25"
-pyo3 = { version = "0.26.0", features = ["abi3-py38"] }
+pyo3 = { version = "0.25.0", features = ["abi3-py38"] }
 parking_lot = "0.12.3"
-numpy = "0.26.0"
+numpy = "0.25.0"
 parquet = { version = "53.0.0", features = ["arrow"] }
 arrow = "53.0.0"
+polars = "0.50.0"
+pyo3-polars = "0.23.1"
