--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ parquet = { version = "53.0.0", features = ["arrow"] }
 arrow = "53.0.0"
 polars = "0.50.0"
 pyo3-polars = "0.23.1"
+rayon = "1.10.0"
+glob = "0.3.1"
+once_cell = "1.19.0"
+num_cpus = "1.16.0"
+polars-core = "0.50.0"
