--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,11 @@ classifiers = [
 ]
 dynamic = ["version"]
 
+dependencies = [
+    "numpy",
+    "polars>=1.8.2",
+]
+
 [project.urls]
 Homepage = "https://github.com/vvsagar/py-oxyroot"
 Repository = "https://github.com/vvsagar/py-oxyroot.git"
