--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,9 @@ parking_lot = "0.12.3"
 numpy = "0.25.0"
 parquet = { version = "53.0.0", features = ["arrow"] }
 arrow = "53.0.0"
-polars = "0.50.0"
+polars = { version = "0.50.0", features = ["diagonal_concat"] }
 pyo3-polars = "0.23.1"
 rayon = "1.10.0"
 glob = "0.3.1"
 once_cell = "1.19.0"
 num_cpus = "1.16.0"
-polars-core = "0.50.0"
