--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,33 +6,33 @@ build-backend = "maturin"
 name = "oxyroot"
 requires-python = ">=3.8,<3.14"
 authors = [
-  {name = "Vidya Sagar Vobbilisetti", email = "mail@vidyasagarv.com"},
+  { name = "Vidya Sagar Vobbilisetti", email = "mail@vidyasagarv.com" },
 ]
 description = "A .root file reader, backed by rust"
 readme = "README.md"
 license = "MIT"
 classifiers = [
-    'Development Status :: 3 - Alpha',
-    'Intended Audience :: Science/Research',
-    'License :: OSI Approved :: MIT License',
-    'Programming Language :: Rust',
-    'Programming Language :: Python',
-    'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.8',
-    'Programming Language :: Python :: 3.9',
-    'Programming Language :: Python :: 3.10',
-    'Programming Language :: Python :: 3.11',
-    'Programming Language :: Python :: 3.12',
-    'Programming Language :: Python :: 3.13',
-    'Programming Language :: Python :: 3 :: Only',
-    'Programming Language :: Python :: Implementation :: CPython',
-    "Programming Language :: Python :: Implementation :: PyPy",
-    'Topic :: Software Development',
-    'Topic :: Scientific/Engineering',
-    'Typing :: Typed',
-    'Operating System :: Microsoft :: Windows',
-    'Operating System :: Unix',
-    'Operating System :: MacOS',
+  'Development Status :: 3 - Alpha',
+  'Intended Audience :: Science/Research',
+  'License :: OSI Approved :: MIT License',
+  'Programming Language :: Rust',
+  'Programming Language :: Python',
+  'Programming Language :: Python :: 3',
+  'Programming Language :: Python :: 3.8',
+  'Programming Language :: Python :: 3.9',
+  'Programming Language :: Python :: 3.10',
+  'Programming Language :: Python :: 3.11',
+  'Programming Language :: Python :: 3.12',
+  'Programming Language :: Python :: 3.13',
+  'Programming Language :: Python :: 3 :: Only',
+  'Programming Language :: Python :: Implementation :: CPython',
+  "Programming Language :: Python :: Implementation :: PyPy",
+  'Topic :: Software Development',
+  'Topic :: Scientific/Engineering',
+  'Typing :: Typed',
+  'Operating System :: Microsoft :: Windows',
+  'Operating System :: Unix',
+  'Operating System :: MacOS',
 ]
 dynamic = ["version"]
 
@@ -43,20 +43,11 @@ Homepage = "https://github.com/vvsagar/py-oxyroot"
 Repository = "https://github.com/vvsagar/py-oxyroot.git"
 
 [project.optional-dependencies]
-tests = [
-    "pytest",
-    "numpy",
-    "uproot",
-]
-dev = [
-    "ruff",
-]
+tests = ["pytest", "numpy", "uproot"]
+dev = ["ruff"]
 
 [tool.maturin]
 python-source = "python"
 features = ["pyo3/extension-module"]
 module-name = "oxyroot"
-include = [
-    "python/oxyroot/oxyroot.pyi", 
-    "python/oxyroot/py.typed",
-]
+include = ["python/oxyroot/oxyroot.pyi", "python/oxyroot/py.typed"]
